updated CV and class project layout

--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -23,6 +23,12 @@ author_profile: true
         text-align: center;
     }
 
+    .centered-image {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+    }
+
 </style>
 
 
@@ -41,7 +47,7 @@ author_profile: true
             </li>
             <li>
                 [<a href="https://almaswpi.github.io/perception.html">view more</a>]
-                <!-- [<a href="https://youtu.be/Q5BHOogOOLo">Video</a>] -->
+                [<a href="https://www.youtube.com/watch?v=O6lXvw2jW0M">video</a>]
             </li>
         </ul>
     </div>
@@ -124,7 +130,7 @@ author_profile: true
         <h3>Dynamical Modeling of Serial Arm Robot
             <br />
         </h3>
-        <p><img src="../images/serial_arm_solver.gif" alt="" width="360" height="240" align="center" vspace="10" hspace="0" style=" padding: 0px 50px 0px 0px; border: #FFFFFF 2px none;" /></p>
+        <p><img src="../images/serial_arm_solver.gif" alt="" width="360" height="240" class="centered-image" vspace="10" hspace="0" style=" padding: 0px 0px 0px 0px; border: #FFFFFF 2px none;" /></p>
     </div>
     <div class="grid-item">
         <h3>
@@ -133,28 +139,28 @@ author_profile: true
             <!-- [<a href="">Video</a>]  -->
             <!-- [<a href="https://github.com/Lehong-Wang/RBE-3002-Repo">Code</a>]  -->
         </h3>
-        <p><img src="../images/rbe3002.png" alt="" width="360" height="240" align="center" vspace="10" hspace="0" style=" padding: 0px 50px 0px 0px; border: #FFFFFF 2px none;" /></p>
+        <p><img src="../images/rbe3002.png" alt="" width="360" height="240" align="center" vspace="10" hspace="0" style=" padding: 0px 0px 0px 0px; border: #FFFFFF 2px none;" /></p>
     </div>
     <div class="grid-item">
         <h3>
             Vision Based 3‐DoF Manipulator
-            <br/>
-            [<a href="https://youtu.be/R9Rk9oMh0oQ">Video</a>] 
+            <!-- <br/> -->
+            [<a href="https://youtu.be/R9Rk9oMh0oQ">video</a>] 
             <!-- [<a href="https://github.com/Lehong-Wang/RBE-3001-Repo">Code</a>]  -->
         </h3>
-        <p><img src="../images/rbe3001.gif" alt="" width="360" height="240" align="center" vspace="10" hspace="0" style=" padding: 0px 50px 0px 0px; border: #FFFFFF 2px none;" /></p>
+        <p><img src="../images/rbe3001.gif" alt="" width="360" height="240" align="center" vspace="10" hspace="0" style=" padding: 0px 0px 0px 0px; border: #FFFFFF 2px none;" /></p>
     </div>
     <div class="grid-item">
         <h3>
             IR Based Mapping Robot
         </h3>
-        <p><img src="../images/rbe2002.jpg" alt="" width="360" height="240" align="center" vspace="10" hspace="0" style=" padding: 0px 50px 0px 0px; border: #FFFFFF 2px none;" /></p>
+        <p><img src="../images/rbe2002.jpg" alt="" width="360" height="240" align="center" vspace="10" hspace="0" style=" padding: 0px 0px 0px 0px; border: #FFFFFF 2px none;" /></p>
     </div>
     <div class="grid-item">
         <h3>
             Autonomous Solar Panel Delivery Robot
         </h3>
-        <p><img src="../images/rbe2001.jpg" alt="" width="360" height="240" align="center" vspace="10" hspace="0" style=" padding: 0px 50px 0px 0px; border: #FFFFFF 2px none;" /></p>
+        <p><img src="../images/rbe2001.jpg" alt="" width="360" height="240" align="center" vspace="10" hspace="0" style=" padding: 0px 0px 0px 0px; border: #FFFFFF 2px none;" /></p>
     </div>
 </div>
 
